test/expected/explain_sv.out
explain signed void x
               ^
16: error: variable of void; did you mean pointer to void?
